Add Noise place property
