# app/Http/Resources/PlaceResource.php
@@ -8,7 +8,7 @@ use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 use OpenApi\Attributes as OA;
 
-#[OA\Schema(required: ['id', 'name', 'description', 'type', 'city', 'placeId', 'address', 'position', 'url', 'sockets', 'size', 'busyness', 'view', 'vRate'], properties: [
+#[OA\Schema(required: ['id', 'name', 'description', 'type', 'city', 'placeId', 'address', 'position', 'url', 'sockets', 'noise', 'size', 'busyness', 'view', 'vRate'], properties: [
     new OA\Property(property: 'id', type: 'integer'),
     new OA\Property(property: 'name', type: 'string'),
     new OA\Property(property: 'description', type: 'string', nullable: true),
@@ -22,6 +22,7 @@ use OpenApi\Attributes as OA;
     ], type: 'object'),
     new OA\Property(property: 'url', type: 'string', nullable: true),
     new OA\Property(property: 'sockets', type: 'string'),
+    new OA\Property(property: 'noise', type: 'string'),
     new OA\Property(property: 'size', type: 'string'),
     new OA\Property(property: 'busyness', type: 'string'),
     new OA\Property(property: 'view', type: 'string'),
@@ -50,6 +51,7 @@ final class PlaceResource extends JsonResource
             ],
             'url' => $this->url,
             'sockets' => $this->sockets,
+            'noise' => $this->noise,
             'size' => $this->size,
             'busyness' => $this->busyness,
             'view' => $this->view,
