# storage/openapi.yaml
@@ -16,6 +16,8 @@ paths:
         -
           $ref: '#/components/parameters/sockets'
         -
+          $ref: '#/components/parameters/noise'
+        -
           $ref: '#/components/parameters/type'
         -
           $ref: '#/components/parameters/view'
@@ -110,6 +112,7 @@ components:
         - position
         - url
         - sockets
+        - noise
         - size
         - busyness
         - view
@@ -156,6 +159,8 @@ components:
             - string
             - 'null'
         sockets:
+          type: string
+        noise:
           type: string
         size:
           type: string
@@ -209,6 +214,12 @@ components:
         type: string
     sockets:
       name: sockets
+      in: query
+      allowEmptyValue: false
+      schema:
+        type: string
+    noise:
+      name: noise
       in: query
       allowEmptyValue: false
       schema:
